--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
-    "date-fns": "^4.1.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
@@ -61,6 +62,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^4.9.5"
   }
 }
