--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2",
     "swiper": "^11.1.14",
