--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
-    "react-datepicker": "^7.5.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^7.5.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
@@ -68,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "typescript": "^4.9.5"
   }
 }
