--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/antd": "^1.0.4",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.11",
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.22.3",
+    "antd": "^5.22.5",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
