--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.22.5",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^7.5.0",
