--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.22.5",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
@@ -70,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/styled-components": "^5.1.34",
     "typescript": "^4.9.5"
   }
