--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.13",
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34",
     "typescript": "^4.9.5"
   }
