--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.3",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.13",
